--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,7 +7,11 @@
   <% end %>
 </p>
 
-<p><%= image_tag @article.image.url %></p>
+<p>
+<% if @article.image.exists? %>
+  <%= image_tag @article.image.url(:medium) %></p>
+<% end %>
+</p>
 
 <p><%= @article.body %></p>
 
