--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,6 +22,8 @@
 
 <%= link_to "<< Back to Articles List", articles_path %>
 
-<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really??"} %>
+<% if logged_in? %>
+  <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really??"} %>
 
-<%= link_to "edit", edit_article_path(@article) %>
+  <%= link_to "edit", edit_article_path(@article) %>
+<% end %>
